force-app/main/default/objects/Contact_Product__c/Contact_Product__c.object-meta.xml
<CustomObject>
    <label>Contact Product</label>
    <nameField>
        <displayFormat>N26-{0000}</displayFormat>
        <label>Contact Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>