force-app/main/default/objects/Contact_Product__c/fields/Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Product_Information__c</fullName>
    <label>Product Information</label>
    <referenceTo>Product_Information__c</referenceTo>
    <relationshipLabel>Contact Products</relationshipLabel>
    <relationshipName>Contact_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>