force-app/main/default/objects/Contact_Product__c/fields/Special_Discount__c.field-meta.xml
<CustomField>
    <fullName>Special_Discount__c</fullName>
    <label>Special Discount (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>